--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -23,12 +23,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: Configure Tailscale
-        uses: tailscale/setup-tailscale@v1
+        
+      - name: Connect Tailscale
+  # You may pin to the exact commit or the version.
+  # uses: tailscale/github-action@cc6818dd6930277a6e4b5d249e32ba2f4cf6ea32
+        uses: tailscale/github-action@v1
         with:
-          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
-          version: latest
+            authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
+   
       - name: Read Variable from credentials.auto.tfvars
         id: read_variable
         run: |
