--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,7 @@ env:
   TF_VAR_proxmox_api_token_secret: ${{ secrets.PROXMOX_API_TOKEN_SECRET }}
   TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
   TF_VAR_proxmox_api_token_id: ${{ secrets.PROXMOX_API_TOKEN_ID }}
-  TF_VAR_cipassword: ${{ secrets.CIPASSWORD }}
+  TF_VAR_cipassword: ${{ secrets.d }}
   VM_NAME: ''
 jobs:
   deploy:
@@ -31,14 +31,15 @@ jobs:
         with:
             authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
    
-      - name: Read Variable from credentials.auto.tfvars
-        id: read_variable
+
+      - name: Read Property from credentials.tfvars
+        id: read_property
         run: |
-          export VM_NAME=$(grep -oP '(?<=vm_name\s=\s")[^"]*' credentials.auto.tfvars)
-          echo "::set-env name=VM_NAME::$VM_NAME"
+          VM_NAME=$(grep -oP '(?<=property_name\s=\s")[^"]*' credentials.auto.tfvars)
+          echo "::set-output name=VM_NAME::$VM_NAME"
 
       - name: Use Variable in Action
-        run: "echo My Variable: ${{ env.VM_NAME }}"
+        run: "echo My Variable: ${{ steps.read_property.outputs.VM_NAME }}"
 
 
       - name: Configure AWS Credentials
@@ -49,7 +50,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Initialize Terraform
-        run: terraform init -backend-config="absent-terraform-remote-state-bucket" -backend-config="key=${{ env.VM_NAME }}/state.tfstate" -backend-config="region=${{ env.AWS_REGION }}"
+        run: terraform init -backend-config="absent-terraform-remote-state-bucket" -backend-config="key=${{ steps.read_property.outputs.VM_NAME }}/state.tfstate" -backend-config="region=${{ env.AWS_REGION }}"
       - name: Initialize Terraform
         run: |
           terraform init \
