--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,6 +15,8 @@ env:
   TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
   TF_VAR_proxmox_api_token_id: ${{ secrets.PROXMOX_API_TOKEN_ID }}
   TF_VAR_cipassword: ${{ secrets.d }}
+  DYNAMODB_TABLE: terraform-remote-state-dynamo
+      encrypt        = true
   VM_NAME: ''
 jobs:
   deploy:
@@ -47,10 +49,11 @@ jobs:
       - name: Initialize Terraform
         run: |
           echo "backend \"s3\" {" > backend.tf
-          echo "  bucket = \"my-s3-bucket\"" >> backend.tf
-          echo "  key    = \"path/to/state.tfstate\"" >> backend.tf
+          echo "  bucket = \"absent-terraform-remote-state-bucket\"" >> backend.tf
+          echo "  key    = \"s3temp/state.tfstate\"" >> backend.tf
           echo "  region = \"${{ env.AWS_REGION }}\"" >> backend.tf
           echo "  dynamodb_table = \"${{ env.DYNAMODB_TABLE }}\"" >> backend.tf
+          echo "  encrypt = true" >> backend.tf
           echo "}" >> backend.tf
           terraform init
 
