--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,7 +16,6 @@ env:
   TF_VAR_proxmox_api_token_id: ${{ secrets.PROXMOX_API_TOKEN_ID }}
   TF_VAR_cipassword: ${{ secrets.d }}
   DYNAMODB_TABLE: terraform-remote-state-dynamo
-      encrypt        = true
   VM_NAME: ''
 jobs:
   deploy:
@@ -44,6 +43,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
           
+      - name: Initialize Terraform
+        run: |
+          echo 'terraform {' > backend.tf
+          echo '  required_version = ">= 1.0.0"' >> backend.tf
+          echo '' >> backend.tf
+          echo '  backend "s3" {' >> backend.tf
+          echo '    bucket = "absent-terraform-remote-state-bucket"' >> backend.tf
+          echo '    key    = "s3/test/state.tfstate"' >> backend.tf
+          echo '    region = "${{ env.AWS_REGION }}"' >> backend.tf
+          echo '    dynamodb_table = "${{ env.DYNAMODB_TABLE }}"' >> backend.tf
+          echo '    encrypt = true' >> backend.tf
+          echo '  }' >> backend.tf
+          echo '}' >> backend.tf
+          terraform init
+
       - name: Initialize Terraform
         run: |
           echo "backend \"s3\" {" > backend.tf
