--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -81,7 +81,7 @@ jobs:
         uses: tailscale/setup-tailscale@v1
         with:
           authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
-          version: latest
+          version: 1.20.0
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
