--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+      - staging
   delete:
     branches:
       - main
+  pull_request:
+    types:
+      - closed
 
 env:
   AWS_REGION: us-east-2
@@ -18,7 +22,7 @@ env:
   DYNAMODB_TABLE: terraform-remote-state-dynamo
   VM_NAME: ''
 jobs:
-  deploy:
+  setup:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,16 +30,11 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Connect Tailscale
-  # You may pin to the exact commit or the version.
-  # uses: tailscale/github-action@cc6818dd6930277a6e4b5d249e32ba2f4cf6ea32
         uses: tailscale/github-action@v1
         with:
             authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
             version: 1.20.0
    
-
-    
-
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -67,6 +66,10 @@ jobs:
       - name: Apply Terraform Changes
         if: github.event_name == 'push'
         run: terraform apply -auto-approve 
+
+  plan:
+    needs: setup
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
   destroy:
     needs: deploy
