--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,9 +15,9 @@ env:
   AWS_REGION: us-east-2
   TAILSCALE_AUTHKEY: ${{ secrets.TAILSCALE_AUTHKEY }}
   TF_VAR_proxmox_api_token_secret: ${{ secrets.PROXMOX_API_TOKEN_SECRET }}
-  TF_VAR_proxmox_api_url: ${{ secrets.PROXMOX_API_URL }}
+  TF_VAR_proxmox_api_url: ${{ env.PROXMOX_API_URL }}
   TF_VAR_proxmox_api_token_id: ${{ secrets.PROXMOX_API_TOKEN_ID }}
-  TF_VAR_cipassword: ${{ secrets.d }}
+  TF_VAR_cipassword: ${{ secrets.CIPASSWORD }}
   DYNAMODB_TABLE: terraform-remote-state-dynamo
   VM_NAME: ''
 jobs:
