--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -58,5 +58,5 @@ jobs:
         if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
         run: terraform apply -auto-approve -var="proxmox_api_url=${{ vars.PROXMOX_API_URL }}" -var="proxmox_api_token_id=${{ secrets.PROXMOX_API_TOKEN_ID }}" -var="proxmox_api_token_secret=${{ secrets.PROXMOX_API_TOKEN_SECRET }}"
       - name: Destroy Terraform Resources
-        if: github.event.issue.closed_by != null && contains(github.event.issue.labels.*.name, 'Deprecated')
+        if: github.event.issue.closed_by != null && contains(github.event.issue.labels.*.name, 'deprecated')
         run: terraform destroy -auto-approve -var="proxmox_api_url=${{ vars.PROXMOX_API_URL }}" -var="proxmox_api_token_id=${{ secrets.PROXMOX_API_TOKEN_ID }}" -var="proxmox_api_token_secret=${{ secrets.PROXMOX_API_TOKEN_SECRET }}"
