changing state backend

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -43,7 +43,7 @@ jobs:
           echo '' >> backend.tf
           echo '  backend "s3" {' >> backend.tf
           echo '    bucket = "absent-terraform-remote-state-bucket"' >> backend.tf
-          echo '    key    = "s3/test/state.tfstate"' >> backend.tf
+          echo '    key    = "${{ github.event.repository.name }}/state.tfstate"' >> backend.tf
           echo '    region = "${{ env.AWS_REGION }}"' >> backend.tf
           echo '    dynamodb_table = "${{ env.DYNAMODB_TABLE }}"' >> backend.tf
           echo '    encrypt = true' >> backend.tf
